# websocket_transport

./: .gitignore  README.md
.claude/: settings.local.json
p2p_sdk/: .gitignore  CLAUDE.md  Cargo.toml  README.md
p2p_sdk/src/: client.rs  config.rs  error.rs  lib.rs  main.rs  message.rs  network.rs  reconnect.rs  registry.rs  server.rs  state.rs  tls.rs
p2p_sdk/src/websocket/: client.rs  config.rs  mod.rs  protocol.rs  reconnect.rs  server.rs  state.rs
sase-direct/: .gitignore  Cargo.toml  README.md
sase-direct/src/: main.rs
test/: index.html
websocket_server/: Cargo.toml  README.md
websocket_server/src/: main.rs
websocket_server/src/p2p_sdk/: client.rs  lib.rs  registry.rs
wwwroot/: README.md  index.html  package-lock.json  package.json  vite.config.js
wwwroot/src/: file-downloader.js  file-uploader.js  main.js  ui.js  websocket-client.js
