[package]
name = "p2p_sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
dirs = "5.0"
toml = "0.8"
chrono = "0.4"

# WebSocket 依赖
tokio-tungstenite = "0.24"
tokio-rustls = "0.26"
rustls-pemfile = "2.2"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
futures-util = "0.3"
